[0.85] fix tab display / align
git-svn-id: https://forge.indepnet.net/svn/glpi/branches/0.85-work@20221 35612d4c-9d10-0410-837c-bf9dd1be60d7

--- a/css/jquery-glpi.css
+++ b/css/jquery-glpi.css
@@ -52,7 +52,7 @@
 }
 .ui-tabs-vertical .ui-tabs-panel {
    padding: 1em;
-   margin: auto 0 0 0;
+   margin-left: 170px;
 /*   position: relative;*/
    float: center;
    /*width: 40em;*/
